# src/main/java/de/rjst/cs/api/CustomerDto.java
@@ -1,5 +1,7 @@
 package de.rjst.cs.api;
 
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
 import lombok.Data;
 
 import java.time.LocalDate;
@@ -7,10 +9,17 @@ import java.time.LocalDate;
 @Data
 public class CustomerDto {
 
+    @NotNull
     private Long id;
-    private String firstName;
-    private String lastName;
-    private LocalDate birthDate;
-    private String email;
 
+    @NotBlank
+    private String firstName;
+
+    @NotBlank
+    private String lastName;
+
+    @NotNull
+    private LocalDate birthDate;
+
+    private String email;
 }
